# mj

siapen-backend-development/: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  carga.sh  local.env  manage.py  pyproject.toml  requirements.txt  sonar-project.properties
siapen-backend-development/autenticacao/: token.py
siapen-backend-development/cadastros/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
siapen-backend-development/componentes/: mj_crypt-0.1.0-py3-none-any.whl
siapen-backend-development/comum/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
siapen-backend-development/configuracao/: settings.py  urls.py  versao.py  wsgi.py
siapen-backend-development/core/: models.py  serializers.py  urls.py  views.py
siapen-backend-development/escolta/: apps.py  models.py  serializers.py  urls.py  views.py
siapen-backend-development/juridico/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
siapen-backend-development/localizacao/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
siapen-backend-development/movimentacao/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
siapen-backend-development/orcrim/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
siapen-backend-development/pessoas/: admin.py  apps.py  models.py  urls.py
siapen-backend-development/prisional/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
siapen-backend-development/scripts/: carga.sh  functions_log.sql  recria_db.sh  (+2 more)
(+235 files in other folders)
